--- a/template/default/cube.html
+++ b/template/default/cube.html
@@ -5,14 +5,14 @@
 			<img src="${ATTACHMENT_URL}/cube-cover/{$cube['cube_cover']}" alt="{$cube['cube_name']}" />
 		</div>
 		<div class="info">
-			<h1>{$cube['cube_name']}</h1>
-			<h2>${nl2br($cube['description'])}</h2>
+			<h1>${htmlspecialchars($cube['cube_name'])}</h1>
+			<h2>${nl2br(htmlspecialchars($cube['description']))}</h2>
 		</div>
 	</div>
 	<div class="product">
 		<ul>
 			<!--{foreach:$products $product}-->
-			<li><a href="product-detail.php?id={$product['id']}"><img src="${ATTACHMENT_URL}/product-cover/{$product['cover']}" alt="{$product['name']}" /></a></li>
+			<li><a href="product-detail.php?id={$product['id']}"><img src="${ATTACHMENT_URL}/product-cover/{$product['cover']}" alt="${htmlspecialchars($product['name'])}" /></a></li>
 			<!--{/foreach}-->
 		</ul>
 	</div>
