--- a/template/default/product-detail.html
+++ b/template/default/product-detail.html
@@ -2,28 +2,28 @@
 <div id="content" class="product-detail share clear-fix">
 	<div class="detail clear-fix">
 		<div class="cover">
-			<img src="${ATTACHMENT_URL}/product-cover/{$row['cover']}" alt="{$row['name']}" />
+			<img src="${ATTACHMENT_URL}/product-cover/{$row['cover']}" alt="${htmlspecialchars($row['name'])}" />
 		</div>
 		<div class="info">
-			<a href="cube.php?id=1"><h1>{$row['cube_name']}</h1></a>
-			<h2>${nl2br($row['cube_description'])}</h2>		
+			<a href="cube.php?id=1"><h1>${htmlspecialchars($row['cube_name'])}</h1></a>
+			<h2>${nl2br(htmlspecialchars($row['cube_description']))}</h2>		
 			
 			<span>Product Info</span>
 			<dl>
 				<dt>Name</dt>
-				<dd>{$row['name']}</dd>
+				<dd>${htmlspecialchars($row['name'])}</dd>
 			</dl>
 			<dl>
 				<dt>Price</dt>
-				<dd>{$row['price']}</dd>
+				<dd>${htmlspecialchars($row['price'])}</dd>
 			</dl>
 			<dl>
 				<dt>Stock</dt>
-				<dd>{$row['stock']}</dd>
+				<dd>${htmlspecialchars($row['stock'])}</dd>
 			</dl>
 			<dl>
 				<dt class="row">Description</dt>
-				<dd class="text">${nl2br($row['description'])}</dd>
+				<dd class="text">${nl2br(htmlspecialchars($row['description']))}</dd>
 			</dl>
 		</div>
 	</div>
